# syslog-ng

./: .travis.yml
.github/workflows/: devshell.yml
dbld/: packages.manifest  rules
dbld/images/: devshell.dockerfile  tarball.dockerfile
lib/logmsg/tests/: test_logmsg_ack.c
lib/logthrsource/tests/: test_logthrsourcedrv.c
modules/add-contextual-data/tests/: test_context_info_db.c  test_filter_selector.c  test_glob_selector.c  test_template_selector.c
modules/affile/: Makefile.am  affile-grammar.ym  affile-parser.c  affile-plugin.c  affile-wildcard-source.c  affile-wildcard-source.h
modules/affile/filemonitor/: Makefile.am  filemonitor_unix.c
modules/csvparser/: csvparser.c
modules/dbparser/: radix.c
