filemonitor_headers = \
  modules/affile/filemonitor/filemonitor.h \
  modules/affile/filemonitor/filemonitor_poll.h
filemonitor_sources = \
  modules/affile/filemonitor/filemonitor.c \
  modules/affile/filemonitor/filemonitor_poll.c

filemonitor_headers += \
  modules/affile/filemonitor/filemonitor_unix.h \
  modules/affile/filemonitor/filemonitor_inotify.h

filemonitor_sources += \
  modules/affile/filemonitor/filemonitor_unix.c \
  modules/affile/filemonitor/filemonitor_inotify.c
